--- a/src/app/translation/translations/en.json
+++ b/src/app/translation/translations/en.json
@@ -27,6 +27,7 @@
       "projection": "Projections"
     },
     "customer": "Customers",
+    "creditcard": "Credit Cards",
     "crm": {
       "title": "CRM",
       "product": "Products",
@@ -787,7 +788,18 @@
     }
   },
   "creditcard": {
-    "title": "Credit Card"
+    "title": "Credit Card",
+    "index": {
+      "title": "Credit Cards",
+      "name": "Name",
+      "expiration": "Expiration",
+      "country": "Country",
+      "state": "State",
+      "city": "City"
+    },
+    "tab": {
+      "general": "GENERAL DETALS"
+    }
   },
   "bill": {
     "index": {
