--- a/src/app/translation/translations/zh_CN.json
+++ b/src/app/translation/translations/zh_CN.json
@@ -27,6 +27,7 @@
             "projection": "投影"
         },
         "customer": "客户",
+        "creditcard": "Credit Cards",
         "crm": {
             "title": "CRM (客户关系管理)",
             "product": "所有产品",
@@ -787,7 +788,18 @@
         }
     },
     "creditcard": {
-      "title": "c Credit Card"
+      "title": "c Credit Card",
+      "index": {
+        "title": "Credit Cards",
+        "name": "Name",
+        "expiration": "Expiration",
+        "country": "Country",
+        "state": "State",
+        "city": "City"
+      },
+      "tab": {
+        "general": "GENERAL DETALS"
+      }
     },
     "bill": {
         "index": {
