--- a/src/app/translation/translations/hy.json
+++ b/src/app/translation/translations/hy.json
@@ -1292,7 +1292,8 @@
 		},
 		"tab": {
 			"general": "ԸՆԴՀԱՆՈՒՐ ՄԱՆՐԱՄԱՍՆԵՐ",
-			"receipts": "ԱՌԱՔՄԱՆ ՍՏԱՑԱԿԱՆՆԵՐ"
+      "transactions": "TRANSACTIONS",
+      "receipts": "ԱՌԱՔՄԱՆ ՍՏԱՑԱԿԱՆՆԵՐ"
 		},
 		"info": {
 			"title": "Հաշվի տեղեկություն",
@@ -1317,6 +1318,15 @@
       "name": "Name",
       "loadbalancer": "Load Balancer",
       "count": "Number of cycles"
+    },
+    "transaction": {
+      "title": "Associated Transactions",
+      "nodata": "No Transactions found.",
+      "alias": "Alias",
+      "amount": "Amount",
+      "response": "Response",
+      "created": "Created",
+      "updated": "Updated"
     }
 	},
 	"shippingreceipt": {
