--- a/src/app/translation/translations/zh_CN.json
+++ b/src/app/translation/translations/zh_CN.json
@@ -1292,6 +1292,7 @@
         },
         "tab": {
             "general": "一般细节",
+            "transactions": "TRANSACTIONS",
             "receipts": "运输收据"
         },
         "info": {
@@ -1317,6 +1318,15 @@
             "name": "Name",
             "loadbalancer": "Load Balancer",
             "count": "Number of cycles"
+        },
+        "transaction": {
+            "title": "Associated Transactions",
+            "nodata": "No Transactions found.",
+            "alias": "Alias",
+            "amount": "Amount",
+            "response": "Response",
+            "created": "Created",
+            "updated": "Updated"
         }
     },
     "shippingreceipt": {
