--- a/src/app/translation/translations/de.json
+++ b/src/app/translation/translations/de.json
@@ -876,7 +876,17 @@
         "cancel": "ABBRECHEN",
         "update": "AKTUALISIEREN",
         "create": "EINGEBEN",
-        "viewfulfillmentprovider": "View Fulfillment Provider"
+        "viewfulfillmentprovider": "View Fulfillment Provider",
+        "description": "Description",
+        "attributes": {
+          "title": "Product Attributes",
+          "dimension": "Dimensions",
+          "unit": "Unit",
+          "width": "Width",
+          "height": "Height",
+          "length": "Length",
+          "weight": "Weight"
+        }
       },
       "schedules": {
         "title": "Produktzyklen",
