--- a/src/app/translation/translations/hy.json
+++ b/src/app/translation/translations/hy.json
@@ -876,7 +876,17 @@
 			"cancel": "ՉԵՂԱՐԿԵԼ",
 			"update": "ԹԱՐՄԱՑՆԵԼ",
 			"create": "ՍՏԵՂԾԵԼ",
-      "viewfulfillmentprovider": "View Fulfillment Provider"
+      "viewfulfillmentprovider": "View Fulfillment Provider",
+      "description": "Description",
+      "attributes": {
+        "title": "Product Attributes",
+        "dimension": "Dimensions",
+        "unit": "Unit",
+        "width": "Width",
+        "height": "Height",
+        "length": "Length",
+        "weight": "Weight"
+      }
     },
 		"schedules": {
 			"title": "Ապրանքի հերթացուցակներ",
