--- a/src/app/translation/translations/zh_CN.json
+++ b/src/app/translation/translations/zh_CN.json
@@ -876,7 +876,17 @@
             "cancel": "取消",
             "update": "更新",
             "create": "创建",
-            "viewfulfillmentprovider": "View Fulfillment Provider"
+            "viewfulfillmentprovider": "View Fulfillment Provider",
+            "description": "Description",
+            "attributes": {
+              "title": "Product Attributes",
+              "dimension": "Dimensions",
+              "unit": "Unit",
+              "width": "Width",
+              "height": "Height",
+              "length": "Length",
+              "weight": "Weight"
+            }
         },
         "schedules": {
             "title": "产品进度表",
