Add image uploading

--- a/src/app/translation/translations/de.json
+++ b/src/app/translation/translations/de.json
@@ -859,6 +859,7 @@
       },
       "tab": {
         "general": "ALLGEMEINES",
+        "images": "IMAGES",
         "schedule": "PRODUKTZYKLEN",
         "campaign": "Kampagnen"
       },
