--- a/src/app/translation/translations/en.json
+++ b/src/app/translation/translations/en.json
@@ -859,6 +859,7 @@
     },
     "tab": {
       "general": "GENERAL DETAILS",
+      "images": "IMAGES",
       "schedule": "SCHEDULES",
       "campaign": "CAMPAIGNS"
     },
