--- a/src/app/translation/translations/hi.json
+++ b/src/app/translation/translations/hi.json
@@ -859,6 +859,7 @@
     },
     "tab": {
       "general": "सामान्य विवरण",
+      "images": "IMAGES",
       "schedule": "अनुसूची",
       "campaign": "अभियान"
     },
