--- a/src/app/translation/translations/hy.json
+++ b/src/app/translation/translations/hy.json
@@ -859,7 +859,8 @@
 		},
 		"tab": {
 			"general": "ԸՆԴՀԱՆՈՒՐ ՄԱՆՐԱՄԱՍՆԵՐ",
-			"schedule": "ՀԵՐԹԱՑՈՒՑԱԿՆԵՐ",
+      "images": "IMAGES",
+      "schedule": "ՀԵՐԹԱՑՈՒՑԱԿՆԵՐ",
 			"campaign": "ԱՐՇԱՎՆԵՐ"
 		},
 		"info": {
