--- a/src/app/translation/translations/zh_CN.json
+++ b/src/app/translation/translations/zh_CN.json
@@ -889,6 +889,22 @@
               "weight": "Weight"
             }
         },
+        "image": {
+          "upload": {
+            "title": "Upload New Image",
+            "dragdrop": "Drag and Drop Image",
+            "select": "Select Image",
+            "upload": "UPLOAD"
+          },
+          "gallery": {
+            "title": "Uploaded Images"
+          },
+          "view": {
+            "name": "Name",
+            "description": "Description",
+            "save": "SAVE"
+          }
+        },
         "schedules": {
             "title": "产品进度表",
             "name": "名称",
