--- a/src/app/translation/translations/hy.json
+++ b/src/app/translation/translations/hy.json
@@ -902,7 +902,8 @@
       "view": {
         "name": "Name",
         "description": "Description",
-        "save": "SAVE"
+        "save": "SAVE",
+        "default": "Default Image"
       }
     },
 		"schedules": {
