--- a/src/app/translation/translations/zh_CN.json
+++ b/src/app/translation/translations/zh_CN.json
@@ -957,7 +957,7 @@
       "cancel": "取消",
       "save": "保存",
       "edit": "编辑产品进度表",
-      "viewloadbalancer": "View Load Balancer"
+      "viewloadbalancer": "View 负载平衡器"
     },
     "cycle": {
       "addtitle": "添加周期",
