--- a/src/app/translation/translations/en.json
+++ b/src/app/translation/translations/en.json
@@ -49,7 +49,7 @@
     "merchant": {
       "title": "Merchants",
       "merchantprovider": "Merchant Providers",
-      "loadbalancer": "Load Balancers"
+      "loadbalancer": "Merchant Provider Groups"
     },
     "settings": {
       "title": "Settings",
@@ -438,7 +438,7 @@
     "mtdgrosscount": "MTD Gross Count",
     "chart": {
       "title": "Merchant Processing",
-      "subtitle": "Current loads and balance",
+      "subtitle": "Current Groupings",
       "nodata": "No Merchants Found",
       "dollar": "Dollar",
       "revenue": "Sale Gross Revenue"
@@ -941,7 +941,7 @@
       "title": "Product Schedules",
       "header": {
         "name": "Name",
-        "loadbalancer": "Load Balancer",
+        "loadbalancer": "Merchant Provider Group",
         "numofcycles": "Number of Cycles"
       }
     },
@@ -953,11 +953,11 @@
       "createtitle": "Create new Product Schedule",
       "title": "Product Schedule Details",
       "name": "Product Schedule Name",
-      "loadbalancer": "Load Balancer",
+      "loadbalancer": "Merchant Provider Group",
       "cancel": "CANCEL",
       "save": "SAVE",
       "edit": "Edit Product Schedule",
-      "viewloadbalancer": "View Load Balancer"
+      "viewloadbalancer": "View Merchant Provider Group"
     },
     "cycle": {
       "addtitle": "Add Cycle",
@@ -1354,7 +1354,7 @@
       "title": "Associated Product Schedules",
       "nodata": "No Product Schedules found.",
       "name": "Name",
-      "loadbalancer": "Load Balancer",
+      "loadbalancer": "Merchant Provider Group",
       "count": "Number of cycles"
     },
     "transaction": {
@@ -1488,9 +1488,9 @@
     }
   },
   "loadbalancer": {
-    "title": "Load Balancer",
+    "title": "Merchant Provider Group",
     "index": {
-      "title": "Load Balancers",
+      "title": "Merchant Provider Groups",
       "header": {
         "name": "Name",
         "merchantnum": "Number of Merchant Providers"
@@ -1500,9 +1500,9 @@
       "general": "GENERAL DETAILS"
     },
     "info": {
-      "createtitle": "Create new Load Balancer",
+      "createtitle": "Create new Merchant Provider Group",
       "name": "Name",
-      "edit": "EDIT LOAD BALANCER",
+      "edit": "EDIT MERCHANT PROVIDER GROUP",
       "cancel": "CANCEL",
       "update": "UPDATE",
       "save": "SAVE"
@@ -1534,7 +1534,7 @@
     "tab": {
       "general": "GENERAL DETAILS",
       "processing": "PROCESSING",
-      "loadbalancer": "LOAD BALANCING"
+      "loadbalancer": "MERCHANT PROVIDER GROUPING"
     },
     "info": {
       "edit": "EDIT MERCHANT PROVIDER",
@@ -1578,9 +1578,9 @@
       }
     },
     "loadbalancer": {
-      "title": "Associated Load Balancers",
-      "view": "View Load Balancer",
-      "nodata": "No Load Balancers found.",
+      "title": "Associated Merchant Provider Groups",
+      "view": "View Merchant Provider Group",
+      "nodata": "No Merchant Provider Groups found.",
       "name": "Name"
     }
   },
