Add 'act as' option to account spe

--- a/src/app/translation/translations/en.json
+++ b/src/app/translation/translations/en.json
@@ -570,6 +570,7 @@
   },
   "account": {
     "title": "Account",
+    "actas": "Act as this Account",
     "index": {
       "title": "Accounts",
       "header": {
