--- a/src/app/translation/translations/hi.json
+++ b/src/app/translation/translations/hi.json
@@ -570,6 +570,7 @@
   },
   "account": {
     "title": "खाता",
+    "actas": "Act as this Account",
     "index": {
       "title": "हिसाब किताब",
       "header": {
