--- a/src/app/translation/translations/hy.json
+++ b/src/app/translation/translations/hy.json
@@ -570,7 +570,8 @@
 	},
 	"account": {
 		"title": "Հաշիվ",
-		"index": {
+    "actas": "Act as this Account",
+    "index": {
 			"title": "Հաշիվներ",
 			"header": {
 				"name": "Անուն",
