--- a/src/app/translation/translations/de.json
+++ b/src/app/translation/translations/de.json
@@ -570,6 +570,7 @@
   },
   "account": {
     "title": "Konto",
+    "actas": "Act as this Account",
     "index": {
       "title": "Konten",
       "header": {
