--- a/src/app/translation/translations/hi.json
+++ b/src/app/translation/translations/hi.json
@@ -41,8 +41,11 @@
       "productschedule": "उत्पाद अनुसूचियों",
       "campaign": "अभियान",
       "emailtemplate": "ईमेल टेम्पलेट",
-      "affiliate" : "संबद्ध",
-      "tracker": "ट्रैकर्स",
+      "traffic": {
+        "title": "Traffic Setup",
+        "affiliate" : "संबद्ध",
+        "tracker": "ट्रैकर्स"
+      },
       "providers": {
         "title": "3 पार्टी प्रदाता",
         "fulfillment": "पूर्ति प्रदाता",
@@ -69,7 +72,7 @@
     "help": {
       "title": "Help",
       "graphql": "GraphQL",
-      "wiki": "Wiki"
+      "support": "Support"
     },
     "search": "खोज"
   },
