Add pending rebills component

--- a/src/app/translation/translations/de.json
+++ b/src/app/translation/translations/de.json
@@ -33,7 +33,8 @@
       "session": "Sitzungen",
       "transaction": "Transaktionen",
       "rebill": "Neubelastung",
-      "shippingreceipt": "Posteinlieferungsscheine"
+      "shippingreceipt": "Posteinlieferungsscheine",
+      "pendingrebill": "Pending Rebills"
     },
     "crm": {
       "title": "CRM",
