Add loadbalancer association to campaign

--- a/src/app/translation/translations/de.json
+++ b/src/app/translation/translations/de.json
@@ -1024,6 +1024,7 @@
       "name": "Name",
       "allowprepaid": "Prepaid-Kreditkarte erlauben",
       "showprepaid": "Prepaid-Kreditkarte ansehen",
+      "defaultgroup": "Default Merchant Provider Group",
       "cancel": "ABBRECHEN",
       "save": "SPEICHERN",
       "edit": "Kampagne bearbeiten"
