--- a/src/app/translation/translations/en.json
+++ b/src/app/translation/translations/en.json
@@ -223,7 +223,13 @@
     "view": "View",
     "exp": "Export",
     "edit": "Edit",
-    "copy": "Copy"
+    "copy": "Copy",
+    "selected": "items selected",
+    "actions": "Apply action",
+    "selectall": "Select all",
+    "deselectall": "Deselect all",
+    "filterall": "Filter",
+    "deleteall": "Delete"
   },
   "singlepage": {
     "created": "Created",
