--- a/src/app/translation/translations/hy.json
+++ b/src/app/translation/translations/hy.json
@@ -1034,8 +1034,12 @@
 			"header": {
 				"name": "Անուն",
 				"created": "Ստեղծվել է",
-				"productnum": "Ընդհանուր ապրանքներ",
-				"schedulednum": "Ընդհանուր հերթագրված"
+        "updated": "Թարմացվել է",
+        "productnum": "Ընդհանուր ապրանքներ",
+				"schedulednum": "Ընդհանուր հերթագրված",
+        "id": "ID",
+        "allowprepaid": "Թույլատրել կանխավճար",
+        "showprepaid": "Ցուցադրել կանխավճարը"
 			}
 		},
 		"tab": {
